[package]
name = "rpi-kiosk"
version = "1.0.0"
description = "Kiosk for displaying a webpage on a Raspberry Pi"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
clap = { version = "4.5.23", features = ["derive"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
